--- a/index.html
+++ b/index.html
@@ -4,81 +4,137 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     </head>
 <body>
-   <header>
-    <nav>
-    <a href="./index.html">WebStudio</a>
-     <ul>
-        <li>Studio</li>
-        <li>Portfolio</li>
-        <li>Contacts</li>
-          <li>info@devstudio.com</li>
-            <li>+11 (000) 111-11-11</li>
+   <header class="page-header">
+    <nav class="header-nav">
+    <a class="logo" href="./index.html">Web<span class="logostudio">Studio</span></a>
+     <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>   
+        </ul>
+        </nav>
+    <address class="contacts">
+        <ul class="contacts-list">
+          <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
      </ul>
-    </nav>
-    <h1>Effective Solutions for Your Business</h1>
-    <button type="button">Order Service</button>
+     </address>
+    
+    <h1 class="nameone">Effective Solutions for Your Business</h1>
+    <button class="klic" type="button">Order Service</button>
     </header> 
     <main>
     <section>
       <ul> 
         <li>
-    <h3>Strategy</h3>
-    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+    <h3 class="namethree">Strategy</h3>
+    <p class="textthree">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
         </li>          
         <li>
-        <h3>Punctuality</h3>
-    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+        <h3 class="namethree">Punctuality</h3>
+    <p class="textthree">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>               
         <li>
-        <h3>Diligence</h3>
-    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+        <h3 class="namethree">Diligence</h3>
+    <p class="textthree">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
         </li>                                   
         <li>
-        <h3>Technologies</h3>
-    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        <h3 class="namethree">Technologies</h3>
+    <p class="textthree">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
         </ul>
      </section>
-     <section>
-    <h2>Our Team</h2>
+     <section class="onesection">
+    <h2 class="nametwo">Our Team</h2>
     <ul>
         <li>
     <img src="/images/mark.jpg" alt="mark"
     width="264"
     height="260"/>
-    <h3>Mark Guerrero</h3>
-    <p>Product Designer</p>
+    <h3 class="namethree">Mark Guerrero</h3>
+    <p class="textthree">Product Designer</p>
         </li>
          <li>
     <img src="images/tomford.jpg" alt="tomford"
     width="264"
     height="260"/>
-    <h3>Tom Ford</h3>
-    <p>Frontend Developer</p>
+    <h3 class="namethree">Tom Ford</h3>
+    <p class="textthree">Frontend Developer</p>
       </li>
        <li>
     <img src="/images/camila.jpg" alt="camila"
     width="264"
     height="260"/>
-   <h3>Camila Garcia</h3>
-   <p>Marketing</p>
+   <h3 class="namethree">Camila Garcia</h3>
+   <p class="textthree">Marketing</p>
         </li>
          <li>
     <img src="images/daniel.jpg" alt="daniel"
     width="264"
     height="260"/>
-    <h3>Daniel Wilson</h3>
-    <p>UI Designer</p>
-        </li>
+    <h3 class="namethree">Daniel Wilson</h3>
+    <p class="textthree">UI Designer</p>
+        </li>            
    </ul>
+    </section>
+    <section>
+        <h2 class="nametwo">Our Portfolio</h2>
+        <ul>
+            <li>
+    <img src="images/portfolone.jpg" alt="bankapp"
+    width="360"
+    height="300"/>
+    <h3 class="namethree">Banking App</h3>
+    <p class="textthree">App</p>
+            </li>
+            <li>
+    <img src="images/portfoltwo.jpg" alt="skaner"
+    width="360"
+    height="300"/>
+    <h3 class="namethree">Cashless Payment</h3>
+    <p class="textthree">Marketing</p>
+            </li>
+            <li>
+    <img src="images/portfolthree.jpg" alt="note"
+    width="360"
+    height="300"/>
+    <h3 class="namethree">Meditation App</h3>
+    <p class="textthree">App</p>  
+            </li>
+            <li>
+    <img src="images/portfolfour.jpg" alt="taxi"
+    width="360"
+    height="300"/>
+    <h3 class="namethree">Taxi Service</h3>
+    <p class="textthree">Marketing</p> 
+            </li>
+            <li>
+    <img src="images/portfolfive.jpg" alt="telefon"
+    width="360"
+    height="300"/>
+    <h3 class="namethree">Screen Illustrations</h3>
+    <p class="textthree">Design</p>
+            </li>       
+             <li>
+    <img src="images/portfolsix.jpg" alt="girl"
+    width="360"
+    height="300"/>
+    <h3 class="namethree">Online Courses</h3>
+    <p class="textthree">Marketing</p> 
+            </li>
+        </ul>
     </section>
     </main>
     <footer>
-    <address>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <address class="fin">
+        <a class="logo" href="./index.html">Web<span class="footerlogo">Studio</span></a>
+        <p class="footertext">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </address>
     </footer>    
     </body>
