--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
    <header class="page-header">
     <nav class="header-nav">
     <a class="logo" href="./index.html">Web<span class="logostudio">Studio</span></a>
-     <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>   
+     <ul class="navlist">
+        <li class="navitem"><a class="navlink" href="./index.html">Studio</a></li>
+        <li class="navitem"><a class="navlink" href="">Portfolio</a></li>
+        <li class="navitem"><a class="navlink" href="">Contacts</a></li>   
         </ul>
         </nav>
     <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="contactslist">
+          <li class="contactsitem"><a class="contactslink" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contactsitem"><a class="contactslink" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
      </ul>
      </address>
     
