--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h2 class="nametwo">Our Team</h2>
     <ul>
         <li>
-    <img src="/images/mark.jpg" alt="mark"
+    <img src="images/mark.jpg" alt="mark"
     width="264"
     height="260"/>
     <h3 class="namethree">Mark Guerrero</h3>
@@ -68,7 +68,7 @@
     <p class="textthree">Frontend Developer</p>
       </li>
        <li>
-    <img src="/images/camila.jpg" alt="camila"
+    <img src="images/camila.jpg" alt="camila"
     width="264"
     height="260"/>
    <h3 class="namethree">Camila Garcia</h3>
