--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Studio</title>
     <link rel="stylesheet" href="./css/styles.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,24 +13,28 @@
    <header class="page-header">
     <nav class="header-nav">
     <a class="logo" href="./index.html">Web<span class="logostudio">Studio</span></a>
-     <ul class="navlist">
-        <li class="navitem"><a class="navlink" href="./index.html">Studio</a></li>
-        <li class="navitem"><a class="navlink" href="">Portfolio</a></li>
-        <li class="navitem"><a class="navlink" href="">Contacts</a></li>   
+     <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>   
         </ul>
         </nav>
     <address class="contacts">
-        <ul class="contactslist">
-          <li class="contactsitem"><a class="contactslink" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="contactsitem"><a class="contactslink" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="contacts-list">
+          <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
      </ul>
      </address>
-    
-    <h1 class="nameone">Effective Solutions for Your Business</h1>
+      </header> 
+      <main>
+        <section>
+            <h1 class="nameone">Effective Solutions for Your Business</h1>
     <button class="klic" type="button">Order Service</button>
-    </header> 
-    <main>
+        </section>
+           
     <section>
+        <section>
+        <h2>Strategy, technology and analytics for brand development</h2>
       <ul> 
         <li>
     <h3 class="namethree">Strategy</h3>
