--- a/index.html
+++ b/index.html
@@ -56,29 +56,29 @@
      <section class="onesection">
     <h2 class="nametwo">Our Team</h2>
     <ul>
-        <li>
-    <img src="images/mark.jpg" alt="mark"
+        <li class="backgroundteam">
+    <img src="./images/mark.jpg" alt="mark"
     width="264"
     height="260"/>
     <h3 class="namethree">Mark Guerrero</h3>
     <p class="textthree">Product Designer</p>
         </li>
-         <li>
-    <img src="images/tomford.jpg" alt="tomford"
+         <li class="backgroundteam">
+    <img src="./images/tomford.jpg" alt="tomford"
     width="264"
     height="260"/>
     <h3 class="namethree">Tom Ford</h3>
     <p class="textthree">Frontend Developer</p>
       </li>
-       <li>
-    <img src="images/camila.jpg" alt="camila"
+       <li class="backgroundteam">
+    <img src="./images/camila.jpg" alt="camila"
     width="264"
     height="260"/>
    <h3 class="namethree">Camila Garcia</h3>
    <p class="textthree">Marketing</p>
         </li>
-         <li>
-    <img src="images/daniel.jpg" alt="daniel"
+         <li class="backgroundteam">
+    <img src="./images/daniel.jpg" alt="daniel"
     width="264"
     height="260"/>
     <h3 class="namethree">Daniel Wilson</h3>
@@ -90,42 +90,42 @@
         <h2 class="nametwo">Our Portfolio</h2>
         <ul>
             <li>
-    <img src="images/portfolone.jpg" alt="bankapp"
+    <img src="./images/portfolone.jpg" alt="bankapp"
     width="360"
     height="300"/>
     <h3 class="namethree">Banking App</h3>
     <p class="textthree">App</p>
             </li>
             <li>
-    <img src="images/portfoltwo.jpg" alt="skaner"
+    <img src="./images/portfoltwo.jpg" alt="skaner"
     width="360"
     height="300"/>
     <h3 class="namethree">Cashless Payment</h3>
     <p class="textthree">Marketing</p>
             </li>
             <li>
-    <img src="images/portfolthree.jpg" alt="note"
+    <img src="./images/portfolthree.jpg" alt="note"
     width="360"
     height="300"/>
     <h3 class="namethree">Meditation App</h3>
     <p class="textthree">App</p>  
             </li>
             <li>
-    <img src="images/portfolfour.jpg" alt="taxi"
+    <img src="./images/portfolfour.jpg" alt="taxi"
     width="360"
     height="300"/>
     <h3 class="namethree">Taxi Service</h3>
     <p class="textthree">Marketing</p> 
             </li>
             <li>
-    <img src="images/portfolfive.jpg" alt="telefon"
+    <img src="./images/portfolfive.jpg" alt="telefon"
     width="360"
     height="300"/>
     <h3 class="namethree">Screen Illustrations</h3>
     <p class="textthree">Design</p>
             </li>       
              <li>
-    <img src="images/portfolsix.jpg" alt="girl"
+    <img src="./images/portfolsix.jpg" alt="girl"
     width="360"
     height="300"/>
     <h3 class="namethree">Online Courses</h3>
@@ -134,11 +134,10 @@
         </ul>
     </section>
     </main>
-    <footer>
-    <address class="fin">
+    <footer class="fin">
         <a class="logo" href="./index.html">Web<span class="footerlogo">Studio</span></a>
         <p class="footertext">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </address>
+        
     </footer>    
     </body>
      </html>
