--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <nav class="header-nav">
     <a class="logo" href="./index.html">Web<span class="logostudio">Studio</span></a>
      <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>   
+        <li class="nav-item"><a href="./index.html" class="nav-link">Studio</a></li>
+        <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
+        <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>   
         </ul>
         </nav>
     <address class="contacts">
@@ -137,7 +137,7 @@
     <footer class="fin">
         <a class="logo" href="./index.html">Web<span class="footerlogo">Studio</span></a>
         <p class="footertext">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        
+
     </footer>    
     </body>
      </html>
