--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </ul>
     </section>
     </main>
-    <footer class="fin">
+    <footer class="final">
         <a class="logo" href="./index.html">Web<span class="footerlogo">Studio</span></a>
         <p class="footertext">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
