--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      </address>
       </header> 
       <main>
-        <section>
+        <section class="sectionnameone">
             <h1 class="nameone">Effective Solutions for Your Business</h1>
     <button class="klic" type="button">Order Service</button>
         </section>
